Added new images to database and fixed text color of search bar

--- a/database.html
+++ b/database.html
@@ -63,7 +63,7 @@
             <h2>Seasonal Topics</h2>
             <div class="featured-guide">
                 <a href="#">
-                    <img src="images/HG Wallpaper Ultra Wide.png" alt="Beginner's Guide">
+                    <img src="images/desert-world.png" alt="Beginner's Guide">
                 </a>
                 <h3>Beginners Guide to Ham Galaxy</h3>
                 <p>by Ham Solo | Nov 2024</p>
@@ -71,28 +71,28 @@
             <div class="guides-list">
                 <div class="guide">
                     <a href="#">
-                        <img src="images/Pig-Shop.png" alt="Species Selection">
+                        <img src="images/lab.png" alt="Species Selection">
                     </a>
                     <h3>Species Selection</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
                 <div class="guide">
                     <a href="#">
-                        <img src="images/Pig-Laser-Carbine.png" alt="Tech Repo">
+                        <img src="images/LR2.png" alt="Tech Repo">
                     </a>
                     <h3>Tech Repo</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
                 <div class="guide">
                     <a href="#">
-                        <img src="images/Red-Fighter.png" alt="Enemy Codex">
+                        <img src="images/gunship-interior.png" alt="Enemy Codex">
                     </a>
                     <h3>Enemy Codex</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
                 <div class="guide">
                     <a href="#">
-                        <img src="images/Chimp-Colony.png" alt="Story">
+                        <img src="images/pig-earth-city.png" alt="Story">
                     </a>
                     <h3>The Legend of Ham Galaxy</h3>
                     <p>by Ham Solo | Nov 2024</p>
@@ -104,19 +104,19 @@
             <div class="hot-topics-list">
                 <div class="topic">
                     <a href="#">
-                        <img src="images/Hognaut.png" alt="Primer: Pigs">
+                        <img src="images/truffle-bowl.png" alt="Primer: Pigs">
                     </a>
                     <h3>Primer: Pigs</h3>
                 </div>
                 <div class="topic">
                     <a href="#">
-                        <img src="images/AstroChimp.png" alt="Primer: Chimps">
+                        <img src="images/banana-crate.png" alt="Primer: Chimps">
                     </a>
                     <h3>Primer: Chimps</h3>
                 </div>
                 <div class="topic">
                     <a href="#">
-                        <img src="images/cat.png" alt="Primer: Cats">
+                        <img src="images/fish-dinner.png" alt="Primer: Cats">
                     </a>
                     <h3>Primer: Cats</h3>
                 </div>
