Added story page back in via link in database page. Fixed a few position issues and media queries on database and factions pages

--- a/database.html
+++ b/database.html
@@ -91,10 +91,10 @@
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
                 <div class="guide">
-                    <a href="#">
+                    <a href="./story.html">
                         <img src="images/pig-earth-city.png" alt="Story">
                     </a>
-                    <h3>The Legend of Ham Galaxy</h3>
+                    <h3>HAM GALAXY: Origins</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
             </div>
