--- a/story.html
+++ b/story.html
@@ -5,15 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ham Galaxy Portal</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./story.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Poppins:300,400,600,700&amp;lang=en"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"/>
     <script src="https://kit.fontawesome.com/9e4cb2d322.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
+    <header class="primary-header flex">
+        <nav>
+            <img src="./images/HGlogo.png" alt="logo" class="logo">
+        </nav>
+    
+        <!-- adds screen-reader-only text for menu -->
+        <button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false">
+            <i class="fa-solid fa-bars"></i>
+            <span class="sr-only">Menu</span>
+        </button>
+    
+        <nav>
+            <ul id="primary-nav" data-visible="false" class="primary-nav flex">
+                <li class="active">
+                    <a href="index.html">
+                        <span aria-hidden="true">00</span>Home
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="factions.html">
+                        <span aria-hidden="true">01</span>Factions
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="database.html">
+                        <span aria-hidden="true">02</span>Database
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="register.html">
+                        <span aria-hidden="true">03</span>Play
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="#">
+                        <span aria-hidden="true">04</span>Shop
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <img src="./images/chimp-city-outskirts.png" alt="story-image" class="story-img">
     <section>
         <div class="content">
-            <h1 class="story-title">Origins</h1>
+            <h1 class="story-title">HAM GALAXY: Origins</h1>
             <br><br>
             <p class="story-text">In the 1960s, during a turbulent era of scientific experimentation, humans embarked on a venture that would forever
                 alter the course of evolution on Earth. In their relentless pursuit to enhance human intelligence, scientists
@@ -82,14 +124,6 @@
             </p>
         </div>
     </section>
-    <p class="lesser-title">HAM GALAXY - RISE OF THE HOGNAUTS</p>
-    <div class="container-youtube"">
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0XbXiK0Noe4?si=TGrMGhUj6Vq01LjX"
-            title="YouTube video player" frameborder="10" style="border: 1px solid #ff88f9; box-shadow: 0 0 20px rgba(255, 62, 239, 1);"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-        </iframe>
-    </div>
     <script type="text/javascript">
         let video = document.querySelector('video');
         window.addEventListener('scroll' , function(){
