Added new picture to story and stand in image for pages under construction

--- a/story.html
+++ b/story.html
@@ -52,7 +52,7 @@
             </ul>
         </nav>
     </header>
-    <img src="./images/chimp-city-outskirts.png" alt="story-image" class="story-img">
+    <img src="./images/boba.png" alt="story-image" class="story-img">
     <section>
         <div class="content">
             <h1 class="story-title">HAM GALAXY: Origins</h1>
