Added underconstruction page and linked to all links pointing nowhere

--- a/database.html
+++ b/database.html
@@ -47,7 +47,7 @@
                     </a>
                 </li>
                 <li class="active">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <span aria-hidden="true">04</span>Shop
                     </a>
                 </li>
@@ -62,7 +62,7 @@
         <section class="seasonal-topics">
             <h2>Seasonal Topics</h2>
             <div class="featured-guide">
-                <a href="#">
+                <a href="under-construction.html">
                     <img src="images/desert-world.png" alt="Beginner's Guide">
                 </a>
                 <h3>Beginners Guide to Ham Galaxy</h3>
@@ -70,21 +70,21 @@
             </div>
             <div class="guides-list">
                 <div class="guide">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <img src="images/lab.png" alt="Species Selection">
                     </a>
                     <h3>Species Selection</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
                 <div class="guide">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <img src="images/LR2.png" alt="Tech Repo">
                     </a>
                     <h3>Tech Repo</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
                 <div class="guide">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <img src="images/gunship-interior.png" alt="Enemy Codex">
                     </a>
                     <h3>Enemy Codex</h3>
@@ -103,19 +103,19 @@
             <h2>Hot Topics</h2>
             <div class="hot-topics-list">
                 <div class="topic">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <img src="images/truffle-bowl.png" alt="Primer: Pigs">
                     </a>
                     <h3>Primer: Pigs</h3>
                 </div>
                 <div class="topic">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <img src="images/banana-crate.png" alt="Primer: Chimps">
                     </a>
                     <h3>Primer: Chimps</h3>
                 </div>
                 <div class="topic">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <img src="images/fish-dinner.png" alt="Primer: Cats">
                     </a>
                     <h3>Primer: Cats</h3>
