--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li class="active">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <span aria-hidden="true">04</span>Shop
                     </a>
                 </li>
@@ -75,7 +75,7 @@
             </div>
             <div class="cta-buttons">
                 <a href="register.html" class="cta">Download Now</a>
-                <a href="#donate" class="cta">Donate</a>
+                <a href="under-construction.html" class="cta">Donate</a>
                 <a href="database.html" class="cta">Learn More</a>
             </div>
         </div>
@@ -103,7 +103,7 @@
         <ul class="news-list">
             <li><strong>Update Alpha 0.031:</strong> New story and species to explore!</li>
             <li><strong>Community Event:</strong> Join the Cosmic Concepts art competition this weekend!
-                <br>Submit your art <a href="#" class="art-competition">here</a> to join!
+                <br>Submit your art <a href="under-construction.html" class="art-competition">here</a> to join!
             </li>
             <li><strong>Patch Notes:</strong> Building frameworks and sharpening tools.</li>
         </ul>
