--- a/register.html
+++ b/register.html
@@ -47,7 +47,7 @@
                     </a>
                 </li>
                 <li class="active">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <span aria-hidden="true">04</span>Shop
                     </a>
                 </li>
