--- a/story.html
+++ b/story.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="active">
-                    <a href="#">
+                    <a href="under-construction.html">
                         <span aria-hidden="true">04</span>Shop
                     </a>
                 </li>
