--- a/factions.html
+++ b/factions.html
@@ -410,8 +410,7 @@
     <div class="character">
         <img src="images/chicken.png" alt="Character 3">
         <div class="info-box">
-            <p>When the Hognauts successfully replicated the ancient human smart-serum, the Chickens were the first the
-                first
+            <p>When the Hognauts successfully replicated the ancient human smart-serum, the Chickens were the first
                 to reap it's rewards, and for that, they will forever owe the Hognauts. Once simple barnyard fowl, the
                 Chickens have evolved into shrewd creatures with an affinity for luxury and comfort. Aligning
                 themselves with the Hognauts, they see in the pig's society an opportunity for indulgence and security. The
