--- a/factions.html
+++ b/factions.html
@@ -112,9 +112,9 @@
             <div class="stat-bar">
                 <span class="bar-name">Intelligence (INT)</span>
                 <div class="bar">
-                    <div class="fill" style="width: 100%;"></div>
+                    <div class="fill" style="width: 90%;"></div>
                 </div>
-                <span class="bar-stat">100</span>
+                <span class="bar-stat">90</span>
             </div>
             <div class="stat-bar">
                 <span class="bar-name">Perception (PER)</span>
@@ -644,7 +644,7 @@
         <img src="images/AstroChimp.png" alt="Character 2">
         <div class="info-box">
             <p>The AstroChimps, also modified by the same genetic experiments, are the descendants of chimpanzees sent into space 
-            during humanity's Cold War era and survived. They thrived among the stars and colonized many worlds. Now envious 
+            during humanity's Cold War era that unknowingly survived. They thrived among the stars and colonized many worlds. Now envious 
             of the Hognauts' power and ungrateful inheritance of Earth, their rightful home, they strive to rebel against the pig's 
             expansion. They embody cunning and ingenuity.
             Utilizing guerrilla tactics and scavenging for resources, they wage a relentless war against their swine opposition.
@@ -691,9 +691,9 @@
             <div class="stat-bar">
                 <span class="bar-name">Intelligence (INT)</span>
                 <div class="bar">
-                    <div class="fill" style="width: 90%;"></div>
+                    <div class="fill" style="width: 100%;"></div>
                 </div>
-                <span class="bar-stat">90</span>
+                <span class="bar-stat">100</span>
             </div>
             <div class="stat-bar">
                 <span class="bar-name">Perception (PER)</span>
