--- a/factions.html
+++ b/factions.html
@@ -756,10 +756,10 @@
     <div class="character">
         <img src="images/mouse.png" alt="Character 5">
         <div class="info-box">
-            <p>Small but incredibly intelligent, Mice have pledged their allegiance to the AstroChimps in their fight
+            <p>Small but incredibly cunning and adaptable, Mice have pledged their allegiance to the AstroChimps in their fight
                 against the
-                Hognaut oppressors. Despite their diminutive size, these rodents possess keen intellects and a knack for
-                invention,
+                Hognaut oppressors. Despite their diminutive size, these rodents possess keen insight and a knack for
+                tech,
                 making them invaluable assets to the AstroChimp resistance. Utilizing their small stature to infiltrate
                 enemy
                 installations and access vital information, they play a crucial role in the guerrilla warfare tactics
@@ -980,14 +980,14 @@
                 <span class="bar-stat">80</span>
             </div>
         </div>
-    <p class="lesser-title">Cows</p>
+    <p class="lesser-title">Cattle</p>
     <div class="character">
         <img src="images/cow.png" alt="Character 9">
         <div class="info-box">
             <p>These gentle giants, have joined the ranks of the AstroChimp resistance in their
                 struggle against
-                the Hognauts. Cows, with their docile demeanor, have long felt under appreciated and taken advantage of within
-                the Hognaut societies. Rejecting the class based stucture of the pigs culture, they hold no value on status, and 
+                the Hognauts. Cattle, with their docile demeanor, have long felt under appreciated and taken advantage of within
+                the Hognaut societies. Rejecting the class based stucture of the pigs culture, they place no value on social status, and 
                 yearn for their own autonomy. Utilizing their strength and resilience, they provide vital support to the AstroChimp resistance,
                 serving as both asset protection and powerful warriors in the fight to reclaim Earth. In solidarity with their fellow sentient beings,
                 they stand against the tyranny of the Hognauts, determined to secure a better future for their kind.</p>
@@ -1097,11 +1097,12 @@
     <div class="character">
         <img src="images/bunny.png" alt="Character 6">
         <div class="info-box">
-            <p>The Bunnies, with their adorable appearance belying their strategic minds, have sided with the AstroChimps in their rebellion against
-            the Hognauts. These agile creatures, strong in out-of-the-box strategic thinking, find kinship with the resourceful
+            <p>The Bunnies, with their adorable appearance belying their deeply strategic minds, have sided with the AstroChimps in their rebellion against
+            the Hognauts. These agile creatures, strong in out-of-the-box thinking, find kinship with the resourceful
             chimps. Rejecting the Hognauts' vision of galactic domination, they long to return to a lost memory of Earth, now
-            ravaged by war. Utilizing their speed and agility in a cruiser just like on foot, they serve as messengers and scouts 
-            for the AstroChimp resistance, navigating treacherous zones, avoiding Hognaut detection to relay vital information when signals can't be sent.</p>
+            ravaged by war and swallowed by Hognaut consumerism. Their speed and agility in a cruiser mirrors their skill on foot, and they serve as messengers and 
+            scouts for the AstroChimp resistance. Navigating treacherous zones is their specialtly, avoiding Hognaut detection to relay vital information when 
+            digital communications fail.</p>
         </div>
     </div>
         <div class="stat-bars">
